src/objects/Account_Intelligence__c.object
<CustomObject>
    <description>For Wattyl Trade</description>
    <fields>
        <fullName>A_Spend_Brushes_DIY__c</fullName>
        <inlineHelpText>e.g. For things like Brush Combs &amp; Brush Restorers.</inlineHelpText>
        <label>DIY/Economy - Brush/Mitt</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>A_Spend_Brushes_P__c</fullName>
        <inlineHelpText>e.g. For things like Brush Combs &amp; Brush Restorers.</inlineHelpText>
        <label>Premium – Brush/Mitt</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>A_Spend_Brushes_T__c</fullName>
        <label>Trade - Brush/Mitt</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>A_Spend_Preparation_DIY__c</fullName>
        <inlineHelpText>e.g. For things like Masking Tapes &amp; Sand Papers.</inlineHelpText>
        <label>DIY/Economy - Preparation</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>A_Spend_Preparation_P__c</fullName>
        <inlineHelpText>e.g. For things like Masking Tapes &amp; Sand Papers.</inlineHelpText>
        <label>Premium - Preparation</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>A_Spend_Preparation_T__c</fullName>
        <label>Trade - Preparation</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>A_Spend_Rollers_DIY__c</fullName>
        <inlineHelpText>e.g. For things like Poles &amp; Trays &amp; Roller Keepers.</inlineHelpText>
        <label>DIY/Economy - Rollers</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>A_Spend_Rollers_P__c</fullName>
        <inlineHelpText>e.g. For things like Poles &amp; Trays &amp; Roller Keepers.</inlineHelpText>
        <label>Premium - Rollers</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>A_Spend_Rollers_T__c</fullName>
        <label>Trade - Rollers</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>A_Spend_Spray_Equipment_DIY__c</fullName>
        <inlineHelpText>What is your percentage of accessory spend by quality for all methods of application? 

e.g. Like Wagner Spray Equipment.</inlineHelpText>
        <label>DIY/Economy - Spray Equipment</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>A_Spend_Spray_Equipment_P__c</fullName>
        <inlineHelpText>What is your percentage of accessory spend by quality for all methods of application? 

e.g. Like Wagner &amp; Graco Spray Equipment.</inlineHelpText>
        <label>Premium - Spray Equipment</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>A_Spend_Spray_Equipment_T__c</fullName>
        <inlineHelpText>e.g. Aelisco Spray Equipment</inlineHelpText>
        <label>Trade - Spray Equipment</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>A_Spend_Texture_DIY__c</fullName>
        <label>DIY/Economy - Texture - Trowel/Hawk</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>A_Spend_Texture_P__c</fullName>
        <inlineHelpText>e.g. For things like Lamb&apos;s Wool Mitts &amp; Trowels.</inlineHelpText>
        <label>Premium - Texture - Trowel/Hawk</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>A_Spend_Texture_T__c</fullName>
        <label>Trade - Texture - Trowel/Hawk</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>A_Spend_Texture_UP__c</fullName>
        <inlineHelpText>e.g. For things like Lamb&apos;s Wool Mitts &amp; Trowels.</inlineHelpText>
        <label>Texture-Ultra Premium</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Account_Intel_Last_Verified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Last person to verify the Acc Intel data.  This will be autopopulated to the User updating the Account Intel Last Verified Date by a Workflow.</description>
        <label>Account Intel Last Verified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Intelligence</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Intel_Last_Verified_Date__c</fullName>
        <label>Account Intel Last Verified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Intelligence</relationshipLabel>
        <relationshipName>Account_Intelligence</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Anticipated_Annual_Purchases__c</fullName>
        <formula>Number_of_Painters__c * 10000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anticipated Annual Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Anticipated_Monthly_Purchases__c</fullName>
        <formula>Anticipated_Annual_Purchases__c /12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anticipated Monthly Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Accessories_Company_Owned_Stores__c</fullName>
        <label>Company Owned Stores</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B_Accessories_Corporate__c</fullName>
        <label>Corporate</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B_Accessories_ITC_Stores__c</fullName>
        <label>ITC Stores</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B_Accessories_Inderpendant_Hardware__c</fullName>
        <label>Independent Hardware</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B_Accessories_Inderpendant_Paint__c</fullName>
        <label>Independent Paint Specialist</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B_Accessories_Online__c</fullName>
        <label>Online</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B_Accessories_Wholesale__c</fullName>
        <inlineHelpText>i.e. Direct from the Manufacturer e.g. From Wagner or &apos;Accessory Only&apos; Distributor</inlineHelpText>
        <label>Wholesale</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Business_Split_Exterior__c</fullName>
        <label>Exterior</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Business_Split_Interior__c</fullName>
        <inlineHelpText>Figures added will be deemed a percentage and can only be entered as whole numbers.</inlineHelpText>
        <label>Interior</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Business_Split_Texture__c</fullName>
        <label>Texture</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>C_Time_3pm_4pm__c</fullName>
        <label>3pm-4pm</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>C_Time_4pm_5pm__c</fullName>
        <label>4pm-5pm</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>C_Time_6am_7am__c</fullName>
        <label>6am-7am</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>C_Time_7am_8am__c</fullName>
        <label>7am-8am</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>C_Time_Other__c</fullName>
        <label>Other</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Completion_Of_Occupation__c</fullName>
        <description>Completion Of Occupation</description>
        <formula>IF(OR(
ISPICKVAL (Occupation__c, &quot;Painter&quot; ),
ISPICKVAL (Occupation__c, &quot;Renderer&quot;),
ISPICKVAL (Occupation__c, &quot;Texture&quot;),
ISPICKVAL (Occupation__c, &quot;Handyman&quot;)
),0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Completion Of Occupation</inlineHelpText>
        <label>Completion Of Occupation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Completion_of_Promotion_Response_Method__c</fullName>
        <description>Completion of Promotion Response Method</description>
        <formula>IF(OR(Contact_Text__c,Contact_Phone__c,Contact_MMS__c,Contact_Email__c), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Completion of Promotion Response Method</inlineHelpText>
        <label>Completion of Promotion Response Method</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Completion_of_Promotion_Response__c</fullName>
        <description>Completion of Promotion Response</description>
        <formula>IF(Promotion_Response__c, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Completion of Promotion Response</inlineHelpText>
        <label>Completion of Promotion Response</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_MMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Text__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Any and all Check Box&apos;s can be selected here and will help us determine which is the best method to make contact with the customer for Promotional Offers.</inlineHelpText>
        <label>Text</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diff_between_Anticipated_Mth_Purchases__c</fullName>
        <formula>Anticipated_Monthly_Purchases__c - Account__r.Rolling_1_12_Month_Avg_Monthly_Purchases__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Diff between Anticipated Mth Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dulux_ShareofBusiness__c</fullName>
        <description>Dulux share/percentage of the Business for this Account</description>
        <inlineHelpText>Figures added will be deemed a percentage and can only be entered as whole numbers.</inlineHelpText>
        <label>Dulux</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>E_Application_Brush__c</fullName>
        <label>Brush/Mitt</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>E_Application_Roller__c</fullName>
        <label>Roller</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>E_Application_Spray__c</fullName>
        <inlineHelpText>This section is relating to the application method of EXTERIOR PAINT only.

Figures added will be deemed a percentage and can only be entered as whole numbers.</inlineHelpText>
        <label>Spray</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>E_Application_Trowel_Mitt__c</fullName>
        <label>Trowel/Hawk</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Exterior_Other_EL__c</fullName>
        <label>Other - Entry Level</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Exterior_Other_None__c</fullName>
        <label>Other - None</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Exterior_Other_P__c</fullName>
        <label>Other - Premium</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Exterior_Other_T__c</fullName>
        <label>Other - Trade</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Exterior_Other_UP__c</fullName>
        <inlineHelpText>This section is relating to EXTERIOR PAINT only. 

We are looking for a split between quality of product purchased - The &quot;Other Companies&quot; component is to be inserted by you and must tally 100%.</inlineHelpText>
        <label>Other - Ultra Premium</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Exterior_Valspar_EL__c</fullName>
        <label>Valspar - Entry Level</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Exterior_Valspar_P__c</fullName>
        <label>Valspar - Premium</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Exterior_Valspar_T__c</fullName>
        <label>Valspar - Trade</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Exterior_Valspar_UP__c</fullName>
        <inlineHelpText>The &quot;Valspar&quot; component will self propagate from Analytics data.</inlineHelpText>
        <label>Valspar - Ultra Premium</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Haymes_ShareofBusiness__c</fullName>
        <description>Haymes share/percentage of the Business for this Account</description>
        <inlineHelpText>Figures added will be deemed a percentage and can only be entered as whole numbers.</inlineHelpText>
        <label>Haymes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>I_Application_Brush__c</fullName>
        <label>Brush/Mitt</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>I_Application_Roller__c</fullName>
        <label>Roller</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>I_Application_Spray__c</fullName>
        <inlineHelpText>This section is relating to the application method of INTERIOR PAINT only.

Figures added will be deemed a percentage and can only be entered as whole numbers.</inlineHelpText>
        <label>Spray</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>I_Application_Trowel_Mitt__c</fullName>
        <label>Trowel</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Interior_Other_EL__c</fullName>
        <label>Other - Entry Level</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Interior_Other_None__c</fullName>
        <label>Other - None</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Interior_Other_P__c</fullName>
        <label>Other - Premium</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Interior_Other_T__c</fullName>
        <label>Other - Trade</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Interior_Other_UP__c</fullName>
        <inlineHelpText>This section is relating to INTERIOR PAINT only. 

We are looking for a split between quality of product purchased - The &quot;Other Companies&quot; component is to be inserted by you and must tally 100%.</inlineHelpText>
        <label>Other - Ultra Premium</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Interior_Valspar_EL__c</fullName>
        <label>Valspar - Entry Level</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Interior_Valspar_P__c</fullName>
        <label>Valspar - Premium</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Interior_Valspar_T__c</fullName>
        <label>Valspar - Trade</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Interior_Valspar_UP__c</fullName>
        <inlineHelpText>The &quot;Valspar&quot; component will self propagate from Analytics data.</inlineHelpText>
        <label>Valspar - Ultra Premium</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>No_Exterior_Paint_Applied__c</fullName>
        <label>No Exterior Paint Applied</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>No_Interior_Paint_Applied__c</fullName>
        <label>No Interior Paint Applied</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>No_Texture_Paint_Applied__c</fullName>
        <label>No Texture Paint Applied</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Number_of_Painters__c</fullName>
        <inlineHelpText>On The Brush</inlineHelpText>
        <label>Number of Painters</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Split_Company_Owned_Stores_Other__c</fullName>
        <inlineHelpText>e.g. A Dulux Trade Centre</inlineHelpText>
        <label>Company Owned Stores - Other (ie Dulux)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>O_Split_Corporate_Masters__c</fullName>
        <label>Corporate - Masters</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>O_Split_Corporate_Other__c</fullName>
        <inlineHelpText>e.g. A Bunnings Store</inlineHelpText>
        <label>Corporate - Other (ie Bunnings)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>O_Split_ITC_Stores__c</fullName>
        <inlineHelpText>e.g. A 3D Inspirations (AUS) or PlaceMakers (NZ) Store</inlineHelpText>
        <label>ITC Stores</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>O_Split_Inderpendant_Hardware__c</fullName>
        <inlineHelpText>e.g. A Mitre10 Store</inlineHelpText>
        <label>Independent Hardware</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>O_Split_Inderpendant_Paint_Specialist__c</fullName>
        <inlineHelpText>e.g. A Paint Place (AUS) or ColourPlus (NZ) Store</inlineHelpText>
        <label>Independent Paint Specialist</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>O_Time_A_Week_Prior__c</fullName>
        <label>A Week Prior</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>O_Time_Day_Before__c</fullName>
        <label>Day Before</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>O_Time_Other__c</fullName>
        <label>Other</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>O_Time_Same_Day__c</fullName>
        <label>Same Day</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <inlineHelpText>This is were you need to determine what type of work this account predominately does.
e.g.  
Is this account predominately a:
     Painter  OR 
     Renderer OR 
     Texture  OR 
     Handyman</inlineHelpText>
        <label>Occupation</label>
        <picklist>
            <picklistValues>
                <fullName>Painter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renderer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Texture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Handyman</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_ShareofBusiness__c</fullName>
        <description>Other competitor&apos;s share/percentage of the Business for this Account</description>
        <inlineHelpText>Figures added will be deemed a percentage and can only be entered as whole numbers.</inlineHelpText>
        <label>Other</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PPG_ShareofBusiness__c</fullName>
        <description>PPG share/percentage of the Business for this Account</description>
        <inlineHelpText>Figures added will be deemed a percentage and can only be entered as whole numbers.</inlineHelpText>
        <label>PPG</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>P_Delivery_Delivery__c</fullName>
        <label>Delivery</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>P_Delivery_Pick_Up__c</fullName>
        <label>Pick-Up</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Promotion_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The Check Box needs to be either ticked (for Yes) OR not ticked (for No)</inlineHelpText>
        <label>Promotion Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T_Application_Brush__c</fullName>
        <label>Brush/Mitt</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>T_Application_Roller__c</fullName>
        <label>Roller</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>T_Application_Spray__c</fullName>
        <inlineHelpText>This section is relating to the application method of TEXTURE PAINT only.

Figures added will be deemed a percentage and can only be entered as whole numbers.</inlineHelpText>
        <label>Spray</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>T_Application_Trowel_Mitt__c</fullName>
        <label>Trowel/Hawk</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Texture_Other_EL__c</fullName>
        <label>Other - Entry Level</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Texture_Other_None__c</fullName>
        <label>Other - None</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Texture_Other_P__c</fullName>
        <label>Other - Premium</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Texture_Other_T__c</fullName>
        <label>Other - Trade</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Texture_Other_UP__c</fullName>
        <inlineHelpText>This section is relating to TEXTURE PAINT only. 

We are looking for a split between quality of product purchased - The &quot;Other Companies&quot; component is to be inserted by you and must tally 100%.</inlineHelpText>
        <label>Other - Ultra Premium</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Texture_Valspar_EL__c</fullName>
        <label>Valspar - Entry Level</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Texture_Valspar_P__c</fullName>
        <label>Valspar - Premium</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Texture_Valspar_T__c</fullName>
        <label>Valspar - Trade</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Texture_Valspar_UP__c</fullName>
        <inlineHelpText>The &quot;Valspar&quot; component will self propagate from Analytics data.</inlineHelpText>
        <label>Valspar - Ultra Premium</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Percentage_of_Q2_to_Q20__c</fullName>
        <description>Total Percentage of Q2 To Q20</description>
        <formula>( 

V_Split_Company_Owned_Stores__c + 
V_Split_ITC_Stores__c + 
V_Split_Corporate_Masters__c + 
V_Split_Inderpendant_Paint_Specialist__c + 
V_Split_Inderpendant_Hardware__c + 


O_Split_Inderpendant_Paint_Specialist__c + 
O_Split_Inderpendant_Hardware__c + 
O_Split_Corporate_Masters__c + 
O_Split_ITC_Stores__c + 
O_Split_Corporate_Other__c + 
O_Split_Company_Owned_Stores_Other__c + 

W_Split_Commercial_Repaint__c + 
W_Split_Commercial_Texture__c + 
W_Split_Residential_Repaint__c + 
W_Split_Commercial_Texture_New__c + 
W_Split_Commercial_Paint_New__c + 
W_Split_Residential_Texture__c + 
W_Split_New_Residential_Proj_Homes_Paint__c + 


Business_Split_Interior__c + 
Business_Split_Exterior__c + 
Business_Split_Texture__c + 


Interior_Other_UP__c + 
Interior_Other_P__c + 
Interior_Other_T__c + 
Interior_Other_EL__c + 
Interior_Other_None__c + 


I_Application_Spray__c + 
I_Application_Roller__c + 
I_Application_Brush__c + 
I_Application_Trowel_Mitt__c + 
No_Interior_Paint_Applied__c + 

Exterior_Other_UP__c + 
Exterior_Other_P__c + 
Exterior_Other_T__c + 
Exterior_Other_EL__c + 
Exterior_Other_None__c + 

E_Application_Spray__c + 
E_Application_Roller__c + 
E_Application_Brush__c + 
E_Application_Trowel_Mitt__c + 
No_Exterior_Paint_Applied__c + 

Texture_Other_UP__c + 
Texture_Other_P__c + 
Texture_Other_T__c + 
Texture_Other_EL__c + 
Texture_Other_None__c + 


T_Application_Spray__c + 
T_Application_Roller__c + 
T_Application_Brush__c + 
T_Application_Trowel_Mitt__c + 
No_Texture_Paint_Applied__c + 

A_Spend_Spray_Equipment_P__c + 
A_Spend_Spray_Equipment_T__c + 
A_Spend_Spray_Equipment_DIY__c + 

A_Spend_Rollers_P__c + 
A_Spend_Rollers_T__c + 
A_Spend_Rollers_DIY__c + 

A_Spend_Brushes_P__c + 
A_Spend_Brushes_T__c + 
A_Spend_Brushes_DIY__c + 

A_Spend_Texture_P__c + 
A_Spend_Texture_T__c + 
A_Spend_Texture_DIY__c + 

A_Spend_Preparation_P__c + 
A_Spend_Preparation_T__c + 
A_Spend_Preparation_DIY__c + 

B_Accessories_Company_Owned_Stores__c + 
B_Accessories_ITC_Stores__c + 
B_Accessories_Corporate__c + 
B_Accessories_Inderpendant_Hardware__c + 
B_Accessories_Inderpendant_Paint__c + 
B_Accessories_Online__c + 
B_Accessories_Wholesale__c + 


P_Delivery_Pick_Up__c + 
P_Delivery_Delivery__c + 

C_Time_6am_7am__c + 
C_Time_7am_8am__c + 
C_Time_3pm_4pm__c + 
C_Time_4pm_5pm__c + 
C_Time_Other__c + 

O_Time_Same_Day__c + 
O_Time_Day_Before__c + 
O_Time_A_Week_Prior__c + 
O_Time_Other__c)/19</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Percentage of Q2 To Q20</inlineHelpText>
        <label>Total Percentage of Q2 to Q20</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_ShareofBusiness__c</fullName>
        <description>Total Share Of Business</description>
        <formula>Account__r.Share_of_Wallet__c  +
Dulux_ShareofBusiness__c +
PPG_ShareofBusiness__c +
Other_ShareofBusiness__c +
Haymes_ShareofBusiness__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Share Of Business</inlineHelpText>
        <label>Total Share Of Business</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_completion_of_Q21_Q22__c</fullName>
        <description>Total completion of Q21 -Q22 (Promotion Response)</description>
        <formula>IF(
AND(Completion_of_Promotion_Response__c = Completion_of_Promotion_Response_Method__c, Total_Percentage_of_Q2_to_Q20__c &gt; 0)
,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total completion of Q21 -Q22 (Promotion Response)</inlineHelpText>
        <label>Total completion of Q21 -Q22</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>V_Split_Company_Owned_Stores__c</fullName>
        <inlineHelpText>e.g. A Wattyl TPC OR Solver SDC</inlineHelpText>
        <label>Company Owned Stores - Valspar</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>V_Split_Corporate_Masters__c</fullName>
        <label>Corporate - Masters</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>V_Split_ITC_Stores__c</fullName>
        <inlineHelpText>e.g. A Paint Place (AUS) or PlaceMakers (NZ) store that is an ITC</inlineHelpText>
        <label>ITC Stores</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>V_Split_Inderpendant_Hardware__c</fullName>
        <inlineHelpText>e.g. A Mitre10 (AUS) Store</inlineHelpText>
        <label>Independent Hardware</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>V_Split_Inderpendant_Paint_Specialist__c</fullName>
        <inlineHelpText>e.g. A Paint Place (AUS) that is not an ITC Store</inlineHelpText>
        <label>Independent Paint Specialist</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Valspar_ShareofBusiness__c</fullName>
        <formula>IF(((Account__r.Rolling_12_Month_Sales__c /(Number_of_Painters__c*10000))&gt; 1.0), 1.0,   (Account__r.Rolling_12_Month_Sales__c/ (Number_of_Painters__c*10000) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valspar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Variance_Share_of_Business__c</fullName>
        <description>Variance in Share of Business</description>
        <formula>Total_ShareofBusiness__c -(100/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Variance in Share of Business</inlineHelpText>
        <label>Variance in Share of Business</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
</CustomObject>